# rag_soccer

./: CLAUDE.md  README.md  schema.sql
.github/: COMMIT_CONVENTION.md
.github/workflows/: test.yml  weekly_refresh.yml
backend/: .coverage  pyproject.toml  requirements.txt
backend/api/: main.py
backend/embedding/: embed_reports.py
backend/ingestion/: explore_football_data.py  fetch_reports.py  fetch_stats.py
backend/retrieval/: cli.py  query.py  query_stats.py  stats_tools.py
backend/retrieval/football/: football_pipeline.py  query.py  query_stats.py  stats_tools.py
backend/retrieval/fpl/: fpl_pipeline.py  query.py
backend/tests/: conftest.py  test_classifier.py  test_classifier_100.py  test_pipeline.py  test_query_helpers.py  test_retrieval.py
docs/: chunk_cap_token_test.md  testing_log.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: AnswerCard.tsx  HistorySidebar.tsx  InputBar.tsx  StandingsTable.tsx
frontend/src/hooks/: useAsk.ts  useStandings.ts
plans/: 01-multi-turn-conversation-IMPLEMENTATION.md  01-multi-turn-conversation.md  accessibility.md  caching_plan.md  next_steps.md  rebrand_dugout.md  structured_outputs.md  testing_plan.md
src/embedding/: embed_reports.py
src/ingestion/: explore_api_football.py
src/retrieval/: query.py  query_stats.py  stats_tools.py  test_classifier.py  test_classifier_100.py  test_pipeline.py  test_retrieval.py
